# desktopVpnSrc

./: LICENSE  README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  runner.exe.manifest
lib/: flutter_v2ray_client_desktop.dart  flutter_v2ray_client_desktop_method_channel.dart  flutter_v2ray_client_desktop_platform_interface.dart  v2ray_parser.dart
lib/errors/: errors.dart
lib/parser/: shadowsocks.dart  socks.dart  trojan.dart  url.dart  v2ray_parser.dart  vless.dart  vmess.dart
lib/utils/: utils.dart
linux/: CMakeLists.txt  flutter_v2ray_client_desktop_plugin.cc
linux/include/flutter_v2ray_client_desktop/: flutter_v2ray_client_desktop_plugin.h
linux/resources/: tun.json
linux/resources/64/: config.json
macos/: flutter_v2ray_client_desktop.podspec
macos/Classes/: FlutterV2rayClientDesktopPlugin.swift
macos/Resources/: tun.json
windows/: CMakeLists.txt  flutter_v2ray_client_desktop_plugin.cpp  flutter_v2ray_client_desktop_plugin.h  flutter_v2ray_client_desktop_plugin_c_api.cpp
windows/include/flutter_v2ray_client_desktop/: flutter_v2ray_client_desktop_plugin_c_api.h
windows/resources/: tun.json
